force-app/main/default/objects/Account_Hierarchy__c/Account_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Account Hierarchy IQVIA</label>
    <nameField>
        <label>Account Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Hierarchies IQVIA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>