force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_Begin_Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_Begin_Valid_Date__c</fullName>
    <label>Wkp. Hierarchy Begin Valid_Date</label>
    <type>Date</type>
</CustomField>