force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wkp. Hierarchy Is Deleted</label>
    <type>Checkbox</type>
</CustomField>