force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_Link__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_Link__c</fullName>
    <description>Wkp Hierarchy Link</description>
    <label>Wkp Hierarchy Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>