force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_Onekey_ID__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_Onekey_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Wkp_Hierarchy_Onekey_ID</description>
    <externalId>true</externalId>
    <label>Wkp Hierarchy Onekey ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>