force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_Parent_Workplace_ID__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_Parent_Workplace_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Wkp_Hierarchy_Parent_Workplace_ID</description>
    <label>Wkp Hierarchy Parent Workplace ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Hierarchies IQVIA (Wkp Relation Workplace ID)</relationshipLabel>
    <relationshipName>Wkp_Relation_Workplace_ID</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>