force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_Relationship_Type__c</fullName>
    <description>Wkp Hierarchy Relationship Type</description>
    <label>Wkp Hierarchy Relationship Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>