force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_TypeCode__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_TypeCode__c</fullName>
    <description>Wkp Hierarchy TypeCode</description>
    <label>Wkp Hierarchy TypeCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>