force-app/main/default/objects/Account_Hierarchy__c/fields/Wkp_Hierarchy_Workplace_ID__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Hierarchy_Workplace_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wkp_Hierarchy_Workplace_ID</description>
    <label>Wkp Hierarchy Workplace ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Hierarchies IQVIA</relationshipLabel>
    <relationshipName>Wkp_Hierarchy_Workplace_ID</relationshipName>
    <type>Lookup</type>
</CustomField>